--- a/learning2code/Section 6 - Bootstrap/bootstrap-tindog/css/master.css
+++ b/learning2code/Section 6 - Bootstrap/bootstrap-tindog/css/master.css
@@ -1,4 +1,5 @@
 h1 {
+  color: #ffffff;
   font-family: "Montserrat";
   font-weight: 900;
   font-size: 3rem;
@@ -7,6 +8,10 @@ h1 {
 
 #title {
   background-color: #ff4c68;
+}
+
+.container-fluid {
+  padding: 3% 15%;
 }
 
 .row {
