--- a/learning2code/Section 6 - Bootstrap/bootstrap-tindog/css/master.css
+++ b/learning2code/Section 6 - Bootstrap/bootstrap-tindog/css/master.css
@@ -1,4 +1,5 @@
 h1 {
+  color: #ffffff;
   font-family: "Montserrat";
   font-weight: 900;
   font-size: 3rem;
@@ -16,4 +17,6 @@ h1 {
 
 .navbar-brand {
   font-family: 'Ubuntu', sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
 }
