--- a/learning2code/Section 6 - Bootstrap/bootstrap-tindog/css/master.css
+++ b/learning2code/Section 6 - Bootstrap/bootstrap-tindog/css/master.css
@@ -20,3 +20,16 @@ h1 {
   font-weight: 700;
   font-size: 2rem;
 }
+
+.nav-link {
+  color: #ffffff;
+  font-family: "Ubuntu";
+}
+
+.navitem {
+  margin: 0 15px;
+}
+
+.container-fluid {
+  padding: 3% 15%;
+}
